feat: implement 5-minute raid cooldown penalty, capture handling, and POST /api/player/prestige endpoint